Revision history for AlgorithmsIT

{{$NEXT}}
    - Corrected the implementation of the algorithm by
      adding a missing line. It now correctly
      handles overlapping matches as it was
      designed to do.
    - Improved the docs.

0.0.1  2023-06-08T18:28:51-05:00
    - Initial version