@@ -23,8 +23,7 @@ jobs:
         with:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
-        run: zef install --/test --test-depends --deps-only .
-      - name: Install App::Prove6
-        run: zef install --/test App::Prove6
+        run: |
+          zef install --/test --deps-only .
       - name: Run Tests
-        run: prove6 -I. t
+        run: zef --debug install .
