@@ -6,6 +6,7 @@ Revision history for AlgorithmsIT
       handles overlapping matches as it was
       designed to do.
     - Improved the docs.
+    - Corrected testing on Github by using Zef
 
 0.0.1  2023-06-08T18:28:51-05:00
     - Initial version
